--- a/pom.xml
+++ b/pom.xml
@@ -5,24 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.jcloud.jaf</groupId>
-    <artifactId>jaf-common</artifactId><properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <servlet-api.version>3.1.0</servlet-api.version>
-    <spring.version>4.2.4.RELEASE</spring.version>
-    <spring.data.jpa.version>1.9.2.RELEASE</spring.data.jpa.version>
-    <spring.data.mongo.version>1.9.1.RELEASE</spring.data.mongo.version>
-    <security.version>3.2.3.RELEASE</security.version>
-    <hibernate-validator.version>5.3.3.Final</hibernate-validator.version>
-    <hibernate.data.version>4.3.6.Final</hibernate.data.version>
-    <jackson.version>2.8.1</jackson.version>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-</properties>
+    <artifactId>jaf-common</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jaf-common</name>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <servlet-api.version>3.1.0</servlet-api.version>
+        <spring.version>4.2.4.RELEASE</spring.version>
+        <spring.data.jpa.version>1.9.2.RELEASE</spring.data.jpa.version>
+        <spring.data.mongo.version>1.9.1.RELEASE</spring.data.mongo.version>
+        <security.version>3.2.3.RELEASE</security.version>
+        <hibernate-validator.version>5.3.3.Final</hibernate-validator.version>
+        <hibernate.data.version>4.3.6.Final</hibernate.data.version>
+        <jackson.version>2.8.1</jackson.version>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 
 
     <dependencies>
