完善一些内容

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,11 +1,11 @@
 log4j.rootLogger=INFO, stdout,commonError,commonInfo
 
-log4j.additivity.com.nd.social.common.handler.ProfileAspect=false
-log4j.logger.com.nd.social.common.handler.ProfileAspect=INFO, requestSlow
-log4j.logger.com.nd.gaea.client.http.WafHttpClient=INFO, requestSlow
+log4j.additivity.cn.jcloud.jaf.common.handler.ProfileAspect=false
+log4j.logger.cn.jcloud.jaf.common.handler.ProfileAspect=INFO, requestSlow
+log4j.logger.cn.jcloud.gaea.client.http.WafHttpClient=INFO, requestSlow
 
-log4j.additivity.com.nd.gaea.rest.exceptions=false
-log4j.logger.com.nd.gaea.rest.exceptions=INFO, stdout,requestError
+log4j.additivity.cn.jcloud.gaea.rest.exceptions=false
+log4j.logger.cn.jcloud.gaea.rest.exceptions=INFO, stdout,requestError
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
